# rust_wasm_strophe_demo

./: .gitignore  Cargo.toml  README.md  index.html  trunk.toml
src/: client.rs  connector.rs  data_cache.rs  delegate.rs  main.rs
src/utils/: console_log.rs  mod.rs
web/: client_delegate.js  style.css  xmpp_client.js
