[package]
name = "wasm-test"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
console_error_panic_hook = "0.1"
indexed_db_futures = "0.3"
jid = "0.9"
js-sys = "0.3"
microtype = "0.7"
minidom = "0.15"
prose_core_client = { git = "https://github.com/prose-im/prose-core-client.git", branch="xmpp-rs", features = ["wasm"] }
prose_core_domain = { git = "https://github.com/prose-im/prose-core-client.git", branch="xmpp-rs" }
prose_core_lib = { git = "https://github.com/prose-im/prose-core-client.git", branch="xmpp-rs", features = ["wasm"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
web-sys = {version = "0.3", features = ["XmlDocument"] }

[profile.release]
# Do not perform backtrace for panic on release builds.
panic = 'abort'
# Perform optimizations on all codegen units.
codegen-units = 1
# Optimize for size.
opt-level = 's' # or 'z' to optimize "aggressively" for size
# Enable link time optimization.
lto = true